--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -22,7 +22,7 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     env:
-      GITHUB_TOKEN: ${{ secrets.RELEASE_LABELER_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.RELEASE_DRAFTER_TOKEN }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
